--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "hookrouter": "1.2.3",
+    "react": "17.0.1",
+    "react-bootstrap": "1.4.0",
+    "react-dom": "17.0.1",
+    "react-hook-form": "6.11.3",
+    "url": "^0.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
