--- a/package.json
+++ b/package.json
@@ -3,14 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.5.3",
-    "hookrouter": "1.2.3",
-    "jquery": "1.9.1 - 3",
-    "popper.js": "^1.16.1",
+    "antd": "^4.8.4",
+    "hookrouter": "^1.2.3",
     "react": "17.0.1",
-    "react-bootstrap": "1.4.0",
     "react-dom": "17.0.1",
-    "react-hook-form": "6.11.3",
+    "react-hook-form": "^6.11.4",
     "url": "^0.11.0"
   },
   "scripts": {
